<resources>
    <string name="app_name">HCare</string>
    <string name="create_account" />
    <string name="log_out" />
    <string name="rupee">\u20B9</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="consult">Consult</string>

    <string name="country_prompt">Choose a country</string>
    <string name="buy_now">Buy Now</string>
    <string name="treatment">Treatment</string>
    <string name="pdf_file">PDF FILE</string>

    <string name="emailLink">connect@hcare.co.in</string>
    <string name="facebook_app_id">1494302147358414</string>
    <string name="fb_login_protocol_scheme">1494302147358414</string>
    <string name="consult_again">Consult Again</string>
    <string name="todo">todo</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="disease">Disease</string>
    <string name="yourIssue">Your issue here</string>
    <string name="Continue">CONTINUE</string>
    <string name="startTyping">Start Typing here ..</string>
    <string name="explainHealthIssue">Explain your health issues in detail</string>
    <string name="editProfile">EDIT PROFILE</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="contactNum">Contact Number</string>
    <string name="prefix">+ 91</string>
    <string name="save">Save</string>
    <string name="update">UPDATE</string>
    <string name="faq">F A Q</string>


    <string-array name="genderArray">
        <item><b>Male</b>    </item>
        <item><b>Female</b>    </item>
        <item><b>Others</b>    </item>
    </string-array>


    <!--navigation items -->
    <string name="profile">Profile</string>
    <string name="chat">Chat with doctor</string>
    <string name="orders">Your Orders</string>
    <string name="helpSupport"><![CDATA[Help & support]]></string>
    <string name="consultations">Consultations</string>
    <string name="covid">Fight Covid-19</string>
    <string name="invite">Invite your friends"</string>
    <string name="customerCare">Customer care</string>
    <string name="logout">Logout</string>
    <string name="rateUs">Rate us</string>

    <string name="doctor">Doctor</string>
    <string name="time">time</string>
    <string name="status">Status</string>
    <string name="specialization">Specialization</string>
    <string name="degree">Degree</string>
    <string name="experience">Experience</string>
    <string name="aboutDoctor">About the doctor</string>
    <string name="available">Available</string>
    <string name="knownLanguages">Known languages</string>
    <string name="registration">Registration</string>

    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="orderNow">Order Now</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="patient">Patient</string>
    <string name="pinCode">PIN code</string>
    <string name="state">State</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="enterMobileNumber"><font size="21"> Enter number here</font></string>
    <string name="seen">Seen</string>
    <string name="date">Date</string>
    <string name="become_a_partner">Become a Partner</string>

</resources>
