<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorAccent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/consult"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/howItWorks"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="15dp"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/todo"
                android:src="@drawable/vector_how_to_use"
                app:tint="@color/colorSecondary" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/informationLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/anchor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="28dp"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/diseaseImage"
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/todo"
                android:src="@drawable/disease_diabetes" />

            <TextView
                android:id="@+id/aboutDisease"
                android:justificationMode="inter_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:paddingTop="20dp"
                android:text="@string/todo"
                android:textSize="14sp"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/anchor"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/colorAccent"
        app:layout_constraintVertical_bias="0.54"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/continueButton"
        android:layout_below="@id/informationLayout"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="12dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/continueButton"
        app:layout_constraintTop_toBottomOf="@+id/anchor">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/explainHealthIssue"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorSecondary"
            android:text="Explain your heal"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/diseases"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:gravity="start"
            android:hint="@string/startTyping"
            android:inputType="textMultiLine"
            android:paddingBottom="25dp"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorSecondary"
        android:elevation="4dp"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:onClick="continueButton"
        android:padding="10dp"
        android:text="@string/Continue"
        android:textColor="?android:textColorPrimaryInverse"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
