<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_margin="5dp"
    android:foreground="?selectableItemBackground"
    android:layout_width="wrap_content"
    android:background="@color/colorSecondary"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:ignore="RtlSymmetry">

    <LinearLayout
        android:paddingStart="25dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:orientation="horizontal"
        android:id="@+id/info"
        android:background="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/colorSecondary"
            android:id="@+id/doctorImage"
            android:src="@drawable/vector_doctor_male"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/doctorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:letterSpacing="0.02"
                android:text="Dr. ABCD WXYZ"
                android:textSize="14sp"
                android:textColor="@color/blackcolor"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/doctorDegree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:letterSpacing="0.02"
                android:text="@string/degree"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/doctorExperience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginVertical="0dp"
                android:layout_marginHorizontal="0dp"
                android:letterSpacing="0.02"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:text="@string/experience"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:background="#BF82E4AD"
            android:layout_marginStart="25dp"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <ImageView
        android:visibility="visible"
        android:id="@+id/viewMore"
        android:layout_width="40dp"
        android:padding="5dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:rotation="-90"
        android:src="@drawable/vector_down_arrow"
        app:tint="#ffffff"
        android:contentDescription="@string/todo" />




</LinearLayout>