<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_margin="5dp"
    android:layout_width="270dp"
    android:layout_height="150dp"
    app:cardBackgroundColor="@color/colorPrimary"
    android:elevation="2dp"
    app:cardCornerRadius="5dp"
    android:foreground="?selectableItemBackground"
    android:layout_gravity="center_horizontal">

    <RelativeLayout
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:id="@+id/doctorImage"
                android:src="@drawable/vector_image_doctor"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/doctorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginTop="0dp"
                    android:gravity="center_vertical"
                    android:letterSpacing="0.02"
                    android:minLines="2"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:text="@string/doctor"
                    android:textSize="14sp"
                    android:textColor="@color/blackcolor"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/doctorDegree"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:gravity="center_vertical"
                    android:letterSpacing="0.02"
                    android:minLines="2"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/degree"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/doctorExperience"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginVertical="0dp"
                    android:layout_marginHorizontal="0dp"
                    android:gravity="center_vertical"
                    android:letterSpacing="0.02"
                    android:minLines="2"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:text="@string/experience"
                    android:textSize="10sp" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
